관제용 Simulator 투입 간격 제어 구현
