# docs/contracts/quality-operations.openapi.json
@@ -1571,6 +1571,14 @@
                   "enum": [1, 2, 4]
                 },
                 "maxItems": 3
+              },
+              "intervals": {
+                "type": "array",
+                "items": {
+                  "type": "integer",
+                  "enum": [1000, 2000, 3000]
+                },
+                "maxItems": 3
               }
             },
             "required": [
@@ -1578,7 +1586,8 @@
               "faults",
               "review",
               "deleteImages",
-              "concurrency"
+              "concurrency",
+              "intervals"
             ],
             "additionalProperties": false
           },
@@ -1667,6 +1676,10 @@
                 "minimum": 1,
                 "maximum": 4,
                 "enum": [1, 2, 4]
+              },
+              "intervalMs": {
+                "type": "integer",
+                "minimum": 1
               },
               "sequence": {
                 "type": "integer",
@@ -2000,6 +2013,10 @@
             "minimum": 1,
             "maximum": 4,
             "enum": [1, 2, 4]
+          },
+          "intervalMs": {
+            "type": "integer",
+            "enum": [1000, 2000, 3000]
           },
           "scope": {
             "type": "string",
